#pragma once
class B_I
{
private:
public:
    B_I() {}
    ~B_I() {}
};
B_I::B_I()
{
}
B_I::~B_I()
{
}