#pragma once
class B_J
{
private:
public:
   B_J() {}
    ~B_J() {}
};
B_J::B_J()
{
}
B_J::~B_J()
{
}