#pragma once
class B_O
{
private:
public:
    B_O() {}
};
B_O::B_O()
{
}
B_O::B_O()
{
}