#pragma once
class B_S
{
private:
public:
    B_S() {}
    ~B_S() {}
};
B_S::B_S()
{
}
B_S::B_S()
{
}