#pragma once
class B_T
{
private:
public:
    B_T() {}
    ~B_T() {}
};
B_T::B_T()
{
}
B_T::B_T()
{
}