#pragma once
class B_Z
{
private:
public:
    B_Z() {}
    ~B_Z() {}
};
B_Z::B_Z()
{
}
B_Z::B_Z()
{
}