#pragma once
class Cordenada
{
    private:
    public:
    Cordenada(){}
    ~Cordenada(){}


};
Cordenada::Cordenada()
{

}
Cordenada::Cordenada()
{

}