#pragma once
class Cronometro
{
    private:
    public:
   Cronometro(){}
    ~Cronometro(){}


};
Cronometro::Cronometro()
{

}
Cronometro::Cronometro()
{

}