#pragma once
class Puntuacion
{
    private:
    public:
    Puntuacion(){}
    ~Puntuacion(){}


};
Puntuacion::Puntuacion()
{

}
Puntuacion::Puntuacion()
{

}