#pragma once

class Tablero
{
private:
    // Atributos de la clase
public:
    // Constructores
    Tablero() {}
    Tablero(int parametro1, double parametro2)
    {
        // Inicialización de atributos si es necesario
    }

    // Destructor
    ~Tablero() {}
};
